# b

./: '  .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.ron  flake.nix  justfile  main.c  makefile  readme.md  treefmt.nix
.github/workflows/: build.yml
assets/biomes/: deep_ocean.ron  ocean.ron  snowy_plains.ron
assets/blocks/: _template.ron  dirt.ron  grass.ron  grass_block.ron  lava.ron  stone.ron  water.ron
assets/shaders/: readme.md
assets/shaders/camera_centric/lib/: camera_uniform.wesl  environment_uniform.wesl
assets/shaders/lib/: camera_uniform.wesl  sky_uniform.wesl
assets/shaders/loading_screen/: loading.wgsl
assets/shaders/opaque/: common.wesl  main.material.ron  main_frag.wesl  main_vert.wesl
assets/shaders/scene/: common.wesl  main.material.ron  main.wesl  main_frag.wesl  main_vert.wesl  simple.wesl  simple.wgsl
assets/shaders/skybox/: main.material.ron  main_frag.wesl  main_vert.wesl
assets/shaders/transparent/: common.wesl  main_frag.wesl  main_vert.wesl
assets/shaders/ui/: common.wesl  main.material.ron  main.wesl  main.wgsl  main_vert.wesl
assets/shaders/wireframe/: common.wesl  main.material.ron  main_frag.wesl  main_vert.wesl
benches/: generation_benchmarks.rs
cbridge/: bcraft.h  main.c
src/: app.rs  lib.rs  main.rs  prelude.rs
src/assets/shaders/: simple.frag  simple.vert
src/core/: app.rs  app_state.rs  ecs_interface.rs  input.rs  mod.rs  runner.rs  window.rs  world.rs
src/core/graphics/: context.rs  mod.rs  types.rs
src/core/state_machine/: plugin.rs
src/ecs/: components.rs  mod.rs  resources.rs  systems.rs  world.rs
src/ecs/components/: mesh.rs  mod.rs  screen_text.rs  transform.rs  visibility.rs
src/ecs/modules/: mod.rs
src/ecs/resources/: asset_storage.rs  camera.rs  delta_time.rs  input.rs  mod.rs  render_queue.rs  shader_manager.rs  texture.rs  texture_manager.rs  time.rs  window.rs
src/ecs/systems/: camera_control_system.rs  camera_movement_system.rs  camera_system.rs  camera_update_system.rs  input_system.rs  mod.rs  render_system.rs  time_system.rs
src/ecs_bridge/: ecs_init.rs  game_state.rs  input.rs  mod.rs  plugin.rs  state.rs
src/ecs_core/: config.rs  frame_sync.rs  mod.rs  worlds.rs
src/ecs_core/cross_world_communication/: mesh_command_channel.rs  mod.rs
src/ecs_core/state_machine/: mod.rs  plugin.rs
src/ecs_modules/: mod.rs  schedules.rs  system_sets.rs
src/ecs_modules/graphics/: plugin.rs
src/ecs_modules/input/: builder.rs  mod.rs  plugin.rs
src/ecs_modules/player/: builder.rs  mod.rs  plugin.rs
src/ecs_modules/rendering/: builder.rs  mod.rs  plugin.rs
src/ecs_modules/screen_text/: builder.rs  mod.rs  plugin.rs
src/ecs_modules/state_machine/: builder.rs  mod.rs  plugin.rs
src/ecs_modules/world/: builder.rs  mod.rs  plugin.rs
src/ecs_resources/: asset_storage.rs  events.rs  graphics_context.rs  mod.rs  render_queue.rs
src/ecs_systems/: mod.rs  state.rs
src/ecs_systems/main/: mod.rs
src/ecs_worlds/: maybe.rs
src/game_world/: mod.rs  schedules.rs  system_sets.rs
src/game_world/app_lifecycle/: mod.rs  plugin.rs
src/game_world/global_resources/: asset_storage.rs  mod.rs  texture_map.rs  time.rs
src/game_world/graphics/: plugin.rs
src/game_world/input/: mod.rs  plugin.rs
src/game_world/player/: plugin.rs
src/game_world/screen_text/: plugin.rs
src/game_world/state_machine/: mod.rs  plugin.rs
src/game_world/ui/: components.rs  mod.rs  plugin.rs
src/game_world/world/: mod.rs  plugin.rs
src/graphics/: buffers.rs  camera.rs  main_renderer.rs  mod.rs  renderer.rs  shader_program.rs  text_renderer.rs  textures.rs  types.rs  webgpu_renderer.rs
src/graphics/rendercore/: main_renderer.rs  mod.rs  setup.rs  types.rs
src/graphics/renderpass/: mod.rs  render_pass.rs  scene_renderpass.rs  shared_data.rs  text_renderpass.rs  types.rs
src/graphics/shaders/: shader_program.rs
src/render_world/: context.rs  material.rs  mod.rs  plan.rs  plugin.rs  resources.rs  scheduling.rs
src/render_world/extract/: extract_camera.rs  mod.rs  plugin.rs
src/render_world/global_extract/: mod.rs
src/render_world/graphics_context/: graphics_context.rs  mod.rs  reconfigure_surface.rs  resources.rs
src/render_world/passes/: mod.rs  render_graph.rs
src/render_world/pipeline/: mod.rs  plugin.rs
src/render_world/prepare/: mod.rs  plugin.rs
src/render_world/queue/: mod.rs  plugin.rs
src/render_world/render/: plugin.rs
src/render_world/textures/: array.rs  error.rs  loader.rs  mod.rs  registry.rs  resource.rs
src/render_world/types/: gpu_queues.rs  instance.rs  mesh.rs  mod.rs  packed_face.rs  texid.rs  vertex.rs  wireframe_vertex.rs
src/render_world/uniforms/: mod.rs  model_uniform.rs
src/simulation_world/: app_lifecycle.rs  mod.rs  schedules.rs  scheduling.rs  system_sets.rs
src/simulation_world/app_lifecycle/: plugin.rs
src/simulation_world/asset_management/: asset_storage.rs  mesh_asset.rs  mod.rs  texture_map_registry.rs
src/simulation_world/biome/: biome_definition.rs  biome_registry.rs  mod.rs
src/simulation_world/block/: block_definition.rs  block_registry.rs  mod.rs  properties.rs  property_loading.rs  property_registry.rs  selected_block.rs  types.rs
src/simulation_world/camera/: camera.rs  camera_movement.rs  component.rs  default_camera.rs  mod.rs  movement.rs
src/simulation_world/chunk/: break_voxel.rs  consts.rs  mod.rs  types.rs
src/simulation_world/generation/: core.rs  mod.rs
src/simulation_world/global_resources/: asset_storage.rs  camera.rs  mod.rs  time.rs
src/simulation_world/input/: mod.rs  plugin.rs
src/simulation_world/player/: mod.rs  plugin.rs
src/simulation_world/screen_text/: plugin.rs
src/simulation_world/showcase/: mod.rs  systems.rs
src/simulation_world/terrain/: mod.rs
src/simulation_world/time/: frame_clock.rs  mod.rs  plugin.rs  simulation_tick.rs  world_clock.rs  world_time.rs
src/simulation_world/ui/: components.rs  mod.rs
src/simulation_world/user_interface/: components.rs  mod.rs
src/simulation_world/world/: plugin.rs
src/utils/: guard.rs  logger.rs  mod.rs
web/: index.html
(+715 files in other folders)
