[package]
name = "b"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[[bin]]
name = "b"
path = "src/main.rs"

[dependencies]

# INFO: --------------------------------
#         logging/error handling
# --------------------------------------

time = { version = "0.3.43", features = ["formatting", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "time",
  "local-time",
  "env-filter",
] }
anyhow = "1.0.100"

# INFO: ------------------
#         graphics
# ------------------------

## Rendering
wgpu = "26.0.1"                                                                                                 # gpu interfacing
glyphon = { git = "https://github.com/grovesNL/glyphon.git", rev = "724ab57edbd6c59ba219cd99cf89925d056392db" } # Specific rev which upgraded to wgpu 26
winit = { version = "0.30.12", features = ["rwh_06"] }                                                          # OS window manage

## Utilities
bytemuck = { version = "1.13", features = ["derive"] } # gpu friendly data
glam = "0.30.5"                                        # linear algebra
image = "0.25.6"                                       # load textures


# INFO: --------------------
#         game logic
# --------------------------

bevy_ecs = "0.16.1"
pollster = "0.3"

# necessary for background tasks
tokio = { version = "1.47.1", features = ["full"] }
futures-lite = "2.6.1"

# INFO: ------------------
#         building
# ------------------------

ron = "0.11.0"                                         # parsing
serde = { version = "1.0.228", features = ["derive"] } # serializing

[build-dependencies]
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
