[package]
name = "b"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "b"
path = "src/main.rs"

[dependencies]

# INFO: --------------------------------
#         logging/error handling
# --------------------------------------

time = { version = "0.3.43", features = ["formatting", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "time",
  "local-time",
  "env-filter",
] }
tracing-tracy = "=0.11.1"

# INFO: ------------------
#         graphics
# ------------------------

## rendering
wgpu = "26.0.1"                                        # gpu interfacing
winit = { version = "0.30.12", features = ["rwh_06"] } # OS window manage

## ui
taffy = "0.9.1"                                                                                                 # ui layout
glyphon = { git = "https://github.com/grovesNL/glyphon.git", rev = "724ab57edbd6c59ba219cd99cf89925d056392db" } # text vectorization/prep

## utils 
bytemuck = { version = "1.13", features = ["derive"] } # gpu friendly data
glam = "0.30.5"                                        # linear algebra
image = "0.25.6"                                       # load textures
naga = { version = "27.0.0", features = ["wgsl-in"] }  # for shader reflection
wesl = "0.2.0"


# INFO: --------------------------
#         simulation logic
# --------------------------------

bevy_ecs = "0.17.2"
pollster = "0.3"

# necessary for background tasks
tokio = { version = "1.47.1", features = ["full"] }
futures-lite = "2.6.1"
futures = "0.3.31"

# INFO: ---------------
#         utils
# ---------------------

derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
serde = { version = "1.0.228", features = ["derive"] }                 # serializing
ron = "0.11.0"                                                         # parsing RON files
thiserror = "2.0.17"

[build-dependencies]
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
wesl = "0.2.0"                                         # shader conversion
