[package]
name = "b"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "b"
path = "src/main.rs"

[features]
tracy = ["dep:tracy-client", "dep:tracing-tracy"]

[dependencies]

# INFO: --------------------------------
#         logging/error handling
# --------------------------------------

time = { version = "0.3.43", features = ["formatting", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "time",
  "local-time",
  "env-filter",
] }
tracy-client = { version = "=0.18.0", optional = true }
tracing-tracy = { version = "=0.11.4", optional = true }

# INFO: ------------------
#         graphics
# ------------------------

## rendering
wgpu = "26.0.1"                                        # gpu interfacing
winit = { version = "0.30.12", features = ["rwh_06"] } # OS window manage

## ui
taffy = "0.9.1"                                                                                                 # ui layout
glyphon = { git = "https://github.com/grovesNL/glyphon.git", rev = "724ab57edbd6c59ba219cd99cf89925d056392db" } # text vectorization/prep

## shaders
naga = { version = "27.0.0", features = ["wgsl-in"] } # for shader reflection
wesl = "0.2.0"                                        # preprocessor

## utils 
bytemuck = { version = "1.13", features = ["derive"] } # gpu friendly data
glam = "0.30.5"                                        # linear algebra
image = "0.25.6"                                       # texture loading

# INFO: --------------------------
#         simulation logic
# --------------------------------

## core ecs library
bevy_ecs = "0.17.2"

## necessary for multi-threaded tasks
futures-timer = "3.0.3"
futures-lite = "2.6.1"
bevy_tasks = "0.17.2"

# INFO: ---------------
#         utils
# ---------------------

derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
serde = { version = "1.0.228", features = ["derive"] }                 # serializing
thiserror = "2.0.17"                                                   # ez errors
rand = "0.9.2"                                                         # rng
ron = "0.11.0"                                                         # parsing RON files
sysinfo = "0.37.2"                                                     # memory usage

[build-dependencies]
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
wesl = "0.2.0"                                         # shader conversion
